--- a/WEB/login.html
+++ b/WEB/login.html
@@ -25,6 +25,8 @@
     </p>
   </div>
 
+  <script src="js/api-service.js"></script>
+  <script src="js/config.js"></script>
   <script src="js/login.js"></script>
 </body>
 </html>
