--- a/WEB/register.html
+++ b/WEB/register.html
@@ -28,6 +28,8 @@
     </p>
   </div>
 
+  <script src="js/api-service.js"></script>
+  <script src="js/config.js"></script>
   <script src="js/register.js"></script>
 </body>
 </html>
